--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,5 @@
             "email": "protsiv.a.wezom@gmail.com"
         }
     ],
-    "minimum-stability": "beta"
+    "minimum-stability": "stable"
 }
